just changes something in the selfies_test

--- a/notebooks/selfies_test.ipynb
+++ b/notebooks/selfies_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d67254d3",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "74b0bfd6",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4af7f024",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
       "TPSA: 0.0\n",
       "QED: 0.42231618686094674\n",
       "Fingerprint length: 2048\n",
-      "MMFF energy: -3.56093354994134\n"
+      "MMFF energy: 2.3688122494872346\n"
      ]
     },
     {
@@ -71,7 +71,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=300x300>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,6 +111,96 @@
     "\n",
     "# 8. draw the mol\n",
     "Draw.MolToImage(mol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c721b10",
+   "metadata": {},
+   "source": [
+    "Hydrogen cyanide (HCN)               C#N\n",
+    "Formaldehyde                         C=O\n",
+    "Methanol                              CO\n",
+    "Ethanol                               CCO\n",
+    "Acetaldehyde                          CC=O\n",
+    "Glycolaldehyde                        O=CCO\n",
+    "Formic acid                            O=C(O)\n",
+    "Urea                                   NC(=O)N\n",
+    "Ammonia                                N\n",
+    "Water                                   O\n",
+    "Glycine                                NCC(=O)O\n",
+    "Alanine                                CC(C(=O)O)N\n",
+    "Acetic acid                             CC(=O)O\n",
+    "Ethylamine                              CCN\n",
+    "Methanethiol                            CS\n",
+    "Pyruvic acid                            CC(=O)C(=O)O\n",
+    "Acetone                                 CC(=O)C\n",
+    "Carbon dioxide                          O=C=O\n",
+    "Carbonyl sulfide                        O=C=S\n",
+    "Phosphoric acid / orthophosphate        OP(=O)(O)O"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ab34470",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C#N -> [C][#N]\n",
+      "C=O -> [C][=O]\n",
+      "CO -> [C][O]\n",
+      "CCO -> [C][C][O]\n",
+      "CC=O -> [C][C][=O]\n",
+      "O=CCO -> [O][=C][C][O]\n",
+      "O=C(O) -> [O][=C][O]\n",
+      "NC(=O)N -> [N][C][=Branch1][C][=O][N]\n",
+      "N -> [N]\n",
+      "O -> [O]\n",
+      "NCC(=O)O -> [N][C][C][=Branch1][C][=O][O]\n",
+      "CC(C(=O)O)N -> [C][C][Branch1][=Branch1][C][=Branch1][C][=O][O][N]\n",
+      "NC(C)C(=O)O -> [N][C][Branch1][C][C][C][=Branch1][C][=O][O]\n",
+      "CC(=O)O -> [C][C][=Branch1][C][=O][O]\n",
+      "CCN -> [C][C][N]\n",
+      "CS -> [C][S]\n",
+      "CC(=O)C(=O)O -> [C][C][=Branch1][C][=O][C][=Branch1][C][=O][O]\n",
+      "CC(=O)C -> [C][C][=Branch1][C][=O][C]\n",
+      "O=C=O -> [O][=C][=O]\n",
+      "O=C=S -> [O][=C][=S]\n",
+      "OP(=O)(O)O -> [O][P][=Branch1][C][=O][Branch1][C][O][O]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def smiles_to_selfies(smiles_list):\n",
+    "    \"\"\"\n",
+    "    Convert a list of SMILES strings to SELFIES strings.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        smiles_list (list of str): List of SMILES molecules.\n",
+    "    \n",
+    "    Returns:\n",
+    "        list of str: Corresponding SELFIES strings.\n",
+    "    \"\"\"\n",
+    "    selfies_list = []\n",
+    "    for smi in smiles_list:\n",
+    "        try:\n",
+    "            selfies_str = sf.encoder(smi)\n",
+    "            selfies_list.append(selfies_str)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Failed to encode SMILES '{smi}': {e}\")\n",
+    "            selfies_list.append(None)\n",
+    "    return selfies_list\n",
+    "\n",
+    "# Example usage\n",
+    "smiles_pool = [\"C#N\", \"C=O\", \"CO\", \"CCO\", \"CC=O\",\"O=CCO\", \"O=C(O)\", \"NC(=O)N\", \"N\", \"O\", \"NCC(=O)O\", \"CC(C(=O)O)N\", \"CC(=O)O\", \"CCN\", \"CS\", \"CC(=O)C(=O)O\", \"CC(=O)C\", \"O=C=O\", \"O=C=S\", \"OP(=O)(O)O\"]\n",
+    "selfies_pool = smiles_to_selfies(smiles_pool)\n",
+    "\n",
+    "for smi, s in zip(smiles_pool, selfies_pool):\n",
+    "    print(smi, \"->\", s)"
    ]
   }
  ],
