New filtered alphabet added to selfies_test.ipynb

--- a/notebooks/selfies_test.ipynb
+++ b/notebooks/selfies_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d67254d3",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6ab34470",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,6 @@
       "O -> [O]\n",
       "NCC(=O)O -> [N][C][C][=Branch1][C][=O][O]\n",
       "CC(C(=O)O)N -> [C][C][Branch1][=Branch1][C][=Branch1][C][=O][O][N]\n",
-      "NC(C)C(=O)O -> [N][C][Branch1][C][C][C][=Branch1][C][=O][O]\n",
       "CC(=O)O -> [C][C][=Branch1][C][=O][O]\n",
       "CCN -> [C][C][N]\n",
       "CS -> [C][S]\n",
@@ -170,7 +169,8 @@
       "CC(=O)C -> [C][C][=Branch1][C][=O][C]\n",
       "O=C=O -> [O][=C][=O]\n",
       "O=C=S -> [O][=C][=S]\n",
-      "OP(=O)(O)O -> [O][P][=Branch1][C][=O][Branch1][C][O][O]\n"
+      "OP(=O)(O)O -> [O][P][=Branch1][C][=O][Branch1][C][O][O]\n",
+      "['[C][#N]', '[C][=O]', '[C][O]', '[C][C][O]', '[C][C][=O]', '[O][=C][C][O]', '[O][=C][O]', '[N][C][=Branch1][C][=O][N]', '[N]', '[O]', '[N][C][C][=Branch1][C][=O][O]', '[C][C][Branch1][=Branch1][C][=Branch1][C][=O][O][N]', '[C][C][=Branch1][C][=O][O]', '[C][C][N]', '[C][S]', '[C][C][=Branch1][C][=O][C][=Branch1][C][=O][O]', '[C][C][=Branch1][C][=O][C]', '[O][=C][=O]', '[O][=C][=S]', '[O][P][=Branch1][C][=O][Branch1][C][O][O]']\n"
      ]
     }
    ],
@@ -200,7 +200,31 @@
     "selfies_pool = smiles_to_selfies(smiles_pool)\n",
     "\n",
     "for smi, s in zip(smiles_pool, selfies_pool):\n",
-    "    print(smi, \"->\", s)"
+    "    print(smi, \"->\", s)\n",
+    "\n",
+    "print(selfies_pool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66871007",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filtering the sematic robust alphabet to include only biogenic atoms, ring and branch tokens\n",
+    "filtered_alphabet = {'[#Branch1]','[#Branch2]','[#Branch3]','[#C+1]','[#C-1]','[#C]','[#N+1]','[#N]','[#O+1]','[#P+1]','[#P-1]','[#P]','[#S+1]','[#S-1]','[#S]','[=Branch1]','[=Branch2]','[=Branch3]','[=C+1]','[=C-1]','[=C]','[=N+1]','[=N-1]','[=N]','[=O+1]','[=O]','[=P+1]','[=P-1]','[=P]','[=Ring1]','[=Ring2]','[=Ring3]','[=S+1]','[=S-1]','[=S]','[Branch1]','[Branch2]','[Branch3]','[C+1]','[C-1]','[C]','[N+1]','[N-1]','[N]','[O+1]','[O-1]','[O]','[P+1]','[P-1]','[P]','[Ring1]','[Ring2]','[Ring3]','[S+1]','[S-1]','[S]'}"
    ]
   }
  ],
