--- a/notebooks/Animation_demo.ipynb
+++ b/notebooks/Animation_demo.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-20T17:24:40.452208Z",
-     "start_time": "2025-11-20T17:24:40.370213Z"
+     "end_time": "2025-11-25T16:20:12.348378Z",
+     "start_time": "2025-11-25T16:20:12.275275Z"
     }
    },
    "source": [
@@ -17,15 +17,15 @@
     "from src.controller.ga import GeneticAlgorithm, GAConfig\n",
     "from src.model.molecule import Molecule\n",
     "from src.model.population import Population\n",
-    "from src.model.fitness import stability_fitness\n",
+    "from src.model.fitness import compute_fitness\n",
     "\n",
     "# Initial population\n",
     "initial = [Molecule(\"[C][O]\"), Molecule(\"[C][C]\"), Molecule(\"[O][C]\")]\n",
     "pop = Population(initial)\n",
     "\n",
     "# Small GA\n",
-    "cfg = GAConfig(mu=3, lam=3, mutation_rate=0.4, crossover_rate=0.7)\n",
-    "ga = GeneticAlgorithm(cfg, stability_fitness)\n",
+    "cfg = GAConfig(mu=3, lam=5, mutation_rate=0.5, crossover_rate=0.5)\n",
+    "ga = GeneticAlgorithm(cfg, compute_fitness)\n",
     "\n",
     "# Soup\n",
     "soup = MolecularSoup(pop)\n",
@@ -56,7 +56,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 7
   }
  ],
  "metadata": {
