--- a/notebooks/selfies_soup.ipynb
+++ b/notebooks/selfies_soup.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# The initial digital soup of molecules that were though to be present in the prebiotic times\n",
-    "# Hydrogen cyanide, Formaldehyde, Methanol, Ethanol, Acetaldehyde, Glycolaldehyde, Formic acid, Urea, Ammonia, Water, Glycine, Alanine, Acetic acid, Ethylamine, Methanethiol, Pyruvic acid, Acetone, Carbon dioxide, Carbonyl sulfide, Phosphoric acid  \n",
+    "# Hydrogen cyanide, Formaldehyde, Methanol, Ethanol, Acetaldehyde, Glycolaldehyde, Formic acid, Urea, Ammonia, Water, Glycine, Alanine, Acetic acid, Ethylamine, Methanethiol, Pyruvic acid, Acetone, Carbon dioxide, Carbonyl sulfide, Phosphoric acid, Benzene, Imidazole, Pyrrole, Cyclopentane, Cyclohexane  \n",
     "soup = ['[C][#N]', '[C][=O]', '[C][O]', '[C][C][O]', '[C][C][=O]', '[O][=C][C][O]', '[O][=C][O]', '[N][C][=Branch1][C][=O][N]', '[N]', '[O]', '[N][C][C][=Branch1][C][=O][O]', '[C][C][Branch1][=Branch1][C][=Branch1][C][=O][O][N]', '[C][C][=Branch1][C][=O][O]', '[C][C][N]', '[C][S]', '[C][C][=Branch1][C][=O][C][=Branch1][C][=O][O]', '[C][C][=Branch1][C][=O][C]', '[O][=C][=O]', '[O][=C][=S]', '[O][P][=Branch1][C][=O][Branch1][C][O][O]', '[C][=C][C][=C][C][=C][Ring1][=Branch1]', '[C][=C][N][=C][NH1][Ring1][Branch1]', '[C][C][=C][NH1][C][=Ring1][Branch1]', '[C][C][C][C][C][Ring1][Branch1]', '[C][C][C][C][C][C][Ring1][=Branch1]']"
    ]
   }
